--- a/.gitignore
+++ b/.gitignore
@@ -18,18 +18,5 @@ node_modules
 
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-
-# Python virtual environments
+yarn-error.log*venv
 venv/
-backend/venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-*.so
-*.egg
-*.egg-info/
-dist/
-build/
